// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Copy to clipboard button > show an error text if clipboard api isn't available 1`] = `
<div>
  <button
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;

exports[`Copy to clipboard button > show an error text if clipboard api isn't available 2`] = `
<div>
  <button
    aria-describedby="copied_35a35a31-c259-48c4-b75a-8da99859dcdb"
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;

exports[`Copy to clipboard button > shows an error text if writing failed 1`] = `
<div>
  <button
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;

exports[`Copy to clipboard button > shows an error text if writing failed 2`] = `
<div>
  <button
    aria-describedby="copied_35a35a31-c259-48c4-b75a-8da99859dcdb"
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;

exports[`Copy to clipboard button > shows an success text if writing succeeded 1`] = `
<div>
  <button
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;

exports[`Copy to clipboard button > shows an success text if writing succeeded 2`] = `
<div>
  <button
    aria-describedby="copied_35a35a31-c259-48c4-b75a-8da99859dcdb"
    class="_copy-button_45cbcd btn btn-dark btn-sm"
    title="renderer.highlightCode.copyCode"
    type="button"
  >
    BootstrapIconMock_Files
  </button>
</div>
`;
